# BELLE

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
belle/ParallelWaveGAN/: setup.py
belle/data/: collation.py  datamodule.py  dataset.py  input_strategies.py  tokenizer.py
belle/models/: __init__.py  belle.py  belle_stream.py  melle.py  visualizer.py
belle/modules/: edlloss.py  embedding.py  optim.py  scaling.py  scheduler.py  transformer.py
belle/utils/: dist_utils.py  symbol_table.py
egs/librispeech/: bin
egs/librispeech/utils/: analyze_duration_ratio.py  check_data.py  concat_jsonl.py  data_pipeline.sh  filter2combine.py  filter_data.py  filter_duration.py  fix_pt.py  (+8 more)
evaluate-zero-shot-tts/: evaluate_new.py  inference_new.py  requirements_evaluation.txt  requirements_inference.txt
evaluate-zero-shot-tts/scripts/: pipeline_baseline.sh  pipeline_new.sh  pipeline_wav_g.sh
evaluate-zero-shot-tts/utils/: mos_cuts.py  mos_cuts.sh  mos_filter.py  pick_demo.py  pick_demo.sh  repeat_prompt.py
evaluate-zero-shot-tts/utmos/: mos_cuts.py  mos_cuts.sh  predict_speechmos.py  speechmos.py
scripts/: run_belle.sh  run_melle.sh  run_stream.sh  settings_belle.sh  settings_melle.sh  settings_stream.sh  setup.sh
tts-launch/: cosyvoice_launch.py  f5tts_launch.py  index_tts_launch.py  mask_gct_launch.py  multi_gpu_cli_launch.py  spark_tts_launch.py  tts_launch.py  util_runner.py  utils.py  xttsv2_launch.py
tts-launch/bash_scripts/: cosyvoice_infer.sh  f5tts_infer.sh  indextts_infer.sh  maskgct_infer.sh  sparktts_infer.sh  xtts_infer.sh
(+11 files in other folders)
